tests/machine/x/java/for_map_collection.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsfor_map_collection555304809/001/Main.java:5: error: for-each not applicable to expression type
	for (var k : m) {
	             ^
  required: array or java.lang.Iterable
  found:    Map<String,Integer>
1 error


  1| var m = {"a": 1, "b": 2}
  2| for k in m {
